--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "^3.22.1",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "expo-image-picker": "~14.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
